changed from tree to fd and updated instructions

--- a/playbooks/01-first-playbook.yml
+++ b/playbooks/01-first-playbook.yml
@@ -3,9 +3,9 @@
   hosts: docker_targets
   become: yes
   tasks:
-    - name: Install tree
+    - name: Install fd
       apk:
-        name: tree
+        name: fd
         state: present
         update_cache: yes
 
