moved the whole thing to use custom docker image using ubuntu and simplified some steps to bring ease and clarity

--- a/playbooks/01-first-playbook.yml
+++ b/playbooks/01-first-playbook.yml
@@ -3,9 +3,9 @@
   hosts: docker_targets
   become: yes
   tasks:
-    - name: Install fd
-      apk:
-        name: fd
+    - name: Install tree
+      package:
+        name: tree
         state: present
         update_cache: yes
 
