--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,7 @@
 [docker_targets:vars]
 ansible_user=ansibleuser
-ansible_ssh_pass=root
+; ansible_ssh_pass=root
+ansible_ssh_private_key_file=~/.ssh/ansible_lab_key
 ansible_connection=ssh
 ansible_become=yes
 ansible_become_method=sudo
