Variables, handlers, roles, linting

--- a/playbooks/01-first-playbook.yml
+++ b/playbooks/01-first-playbook.yml
@@ -4,7 +4,7 @@
   become: yes
   tasks:
     - name: Install tree
-      package:
+      apt:
         name: tree
         state: present
         update_cache: yes
